# my_engineering_team_crewai_test

./: LICENSE  README.md  pyproject.toml
output/: Snake.py  Snake.py_design.md  app.py
src/my_engineering_team/: crew.py  main.py
src/my_engineering_team/config/: agents.yaml  tasks.yaml
