[project]
name = "my_engineering_team"
version = "0.1.0"
description = "my_engineering_team using crewAI"
authors = [{ name = "Konstantin Kalinin"}]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
my_engineering_team = "my_engineering_team.main:run"
run_crew = "my_engineering_team.main:run"
train = "my_engineering_team.main:train"
replay = "my_engineering_team.main:replay"
test = "my_engineering_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
